--- a/01_Elementary_Operations.ipynb
+++ b/01_Elementary_Operations.ipynb
@@ -23,19 +23,31 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/fmml2021/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/venkat52/fmml2021/blob/main/01_Elementary_Operations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "d_4Xzhe4p5Jh"
+        "id": "d_4Xzhe4p5Jh",
+        "outputId": "cd86d55b-2c2f-4665-cecf-4a3b000355e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "!python --version"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python 3.7.11\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -59,112 +71,262 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dm1hT_B9jXGu"
+        "id": "dm1hT_B9jXGu",
+        "outputId": "03886b31-eac0-4018-8a2b-24cc4309bfd7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "3 + 2         # addition"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sUhkQPuhXbYj"
+        "id": "sUhkQPuhXbYj",
+        "outputId": "02659391-e23c-478c-9fea-142bd9244609",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "3 - 2         # subtraction"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B1gLBI1LXo1m"
+        "id": "B1gLBI1LXo1m",
+        "outputId": "5ac30dc4-351a-4485-98ec-c09a3d33fb81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 * 3         # multiplication"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TwvpedNVXzRc"
+        "id": "TwvpedNVXzRc",
+        "outputId": "3e51ab01-7f3a-4764-fe36-609e8f971f11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 / 2         # division (always returns a float)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2LQZZcRPX5Bt"
+        "id": "2LQZZcRPX5Bt",
+        "outputId": "a04cb251-96e6-4183-99f6-e4916c7789be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type (7 / 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qjJkqqXcX95p"
+        "id": "qjJkqqXcX95p",
+        "outputId": "8fa9666d-c11c-4ffc-d993-63ab467ea5b3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 // 2        # floor division (returns an integer - discards decimal part)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2L_ku8CLYKDC"
+        "id": "2L_ku8CLYKDC",
+        "outputId": "a251c600-9395-479f-cf8f-07af87314255",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "type ( 7 // 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dH2NmrgNYM97"
+        "id": "dH2NmrgNYM97",
+        "outputId": "8a050d50-8b1a-40db-c03f-2782ffd6b992",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 % 2         # modulus operator - remainder is fetched after division"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wNTJter-YZ7W"
+        "id": "wNTJter-YZ7W",
+        "outputId": "4f960c83-f7fa-45ff-a233-596be61ddb62",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "7 ** 2        # exponentiation "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "49"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "asikDVm7YvYT"
+        "id": "asikDVm7YvYT",
+        "outputId": "705bebe7-e1ac-4555-decd-ca959afd9a15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "5 - 2 * 2     # operator precedence : (), **, -(unary),  * or /, + or -"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -176,52 +338,128 @@
         "first_name = 'charlie'\n",
         "second_name = \"chaplin\""
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oYu_ynPOeS2_"
+        "id": "oYu_ynPOeS2_",
+        "outputId": "94fc39de-fc94-4c7b-c5f3-628371783ec4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliechaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oIY8q8wgehFC"
+        "id": "oIY8q8wgehFC",
+        "outputId": "9e2f043f-d6d7-4ae9-f12a-0c11a25f29e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name + ' ' + second_name"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charlie chaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6Vuv8iMbevRJ"
+        "id": "6Vuv8iMbevRJ",
+        "outputId": "46d1aa5b-6fd8-48be-e68c-ec8b520a4a2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "first_name * 2"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QPblckrXe2ui"
+        "id": "QPblckrXe2ui",
+        "outputId": "1e430cdf-553f-4dc9-bc68-ef5fc2adce36",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "(first_name * 2) + ' ' + (second_name * 3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'charliecharlie chaplinchaplinchaplin'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -243,31 +481,60 @@
         "brick_breadth = 4\n",
         "brick_height = 2"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pKZ7uDHCZ3At"
+        "id": "pKZ7uDHCZ3At",
+        "outputId": "b6d4a208-c3ff-4b0e-d14e-b6dc4338f12c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "brick_volume = brick_length * brick_breadth * brick_height\n",
         "print (brick_volume)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "40\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S2zZsoBb2z45"
+        "id": "S2zZsoBb2z45",
+        "outputId": "087752a8-95f8-42a5-f765-262c4fd06fa8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# 2. What will the expression -3 ** 2 evaluate to ?\n"
+        "# 2. What will the expression -3 ** 2 evaluate to ?\n",
+        "x=-3\n",
+        "x**2"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -284,10 +551,36 @@
         "id": "fZ4Tpi0B27lf"
       },
       "source": [
-        ""
+        "milage=38\n",
+        "petrol_per_litre = 102\n",
+        "cash_available= 50"
       ],
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wCMMIv8tU86J",
+        "outputId": "67255fe5-f5c3-4788-8aaf-9ef86193b29c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "distance_travelled = (milage/petrol_per_litre)*cash_available\n",
+        "print('distance travelled is ',round(distance_travelled,2))"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "distance travelled is  18.63\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
