--- a/01_Elementary_Operations.ipynb
+++ b/01_Elementary_Operations.ipynb
@@ -30,15 +30,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "d_4Xzhe4p5Jh",
-        "outputId": "cd86d55b-2c2f-4665-cecf-4a3b000355e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cd86d55b-2c2f-4665-cecf-4a3b000355e1"
       },
       "source": [
         "!python --version"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,15 +72,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "dm1hT_B9jXGu",
-        "outputId": "03886b31-eac0-4018-8a2b-24cc4309bfd7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "03886b31-eac0-4018-8a2b-24cc4309bfd7"
       },
       "source": [
         "3 + 2         # addition"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,15 +98,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "sUhkQPuhXbYj",
-        "outputId": "02659391-e23c-478c-9fea-142bd9244609",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "02659391-e23c-478c-9fea-142bd9244609"
       },
       "source": [
         "3 - 2         # subtraction"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,15 +124,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "B1gLBI1LXo1m",
-        "outputId": "5ac30dc4-351a-4485-98ec-c09a3d33fb81",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5ac30dc4-351a-4485-98ec-c09a3d33fb81"
       },
       "source": [
         "5 * 3         # multiplication"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -150,15 +150,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "TwvpedNVXzRc",
-        "outputId": "3e51ab01-7f3a-4764-fe36-609e8f971f11",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3e51ab01-7f3a-4764-fe36-609e8f971f11"
       },
       "source": [
         "7 / 2         # division (always returns a float)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,15 +176,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "2LQZZcRPX5Bt",
-        "outputId": "a04cb251-96e6-4183-99f6-e4916c7789be",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a04cb251-96e6-4183-99f6-e4916c7789be"
       },
       "source": [
         "type (7 / 2)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -202,15 +202,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "qjJkqqXcX95p",
-        "outputId": "8fa9666d-c11c-4ffc-d993-63ab467ea5b3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8fa9666d-c11c-4ffc-d993-63ab467ea5b3"
       },
       "source": [
         "7 // 2        # floor division (returns an integer - discards decimal part)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,15 +228,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "2L_ku8CLYKDC",
-        "outputId": "a251c600-9395-479f-cf8f-07af87314255",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a251c600-9395-479f-cf8f-07af87314255"
       },
       "source": [
         "type ( 7 // 2)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -254,15 +254,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "dH2NmrgNYM97",
-        "outputId": "8a050d50-8b1a-40db-c03f-2782ffd6b992",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8a050d50-8b1a-40db-c03f-2782ffd6b992"
       },
       "source": [
         "7 % 2         # modulus operator - remainder is fetched after division"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,15 +280,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "wNTJter-YZ7W",
-        "outputId": "4f960c83-f7fa-45ff-a233-596be61ddb62",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4f960c83-f7fa-45ff-a233-596be61ddb62"
       },
       "source": [
         "7 ** 2        # exponentiation "
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,15 +306,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "asikDVm7YvYT",
-        "outputId": "705bebe7-e1ac-4555-decd-ca959afd9a15",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "705bebe7-e1ac-4555-decd-ca959afd9a15"
       },
       "source": [
         "5 - 2 * 2     # operator precedence : (), **, -(unary),  * or /, + or -"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,23 +338,23 @@
         "first_name = 'charlie'\n",
         "second_name = \"chaplin\""
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "oYu_ynPOeS2_",
-        "outputId": "94fc39de-fc94-4c7b-c5f3-628371783ec4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "94fc39de-fc94-4c7b-c5f3-628371783ec4"
       },
       "source": [
         "first_name + second_name"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -375,16 +375,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "oIY8q8wgehFC",
-        "outputId": "9e2f043f-d6d7-4ae9-f12a-0c11a25f29e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "9e2f043f-d6d7-4ae9-f12a-0c11a25f29e3"
       },
       "source": [
         "first_name + ' ' + second_name"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -405,16 +405,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "6Vuv8iMbevRJ",
-        "outputId": "46d1aa5b-6fd8-48be-e68c-ec8b520a4a2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "46d1aa5b-6fd8-48be-e68c-ec8b520a4a2d"
       },
       "source": [
         "first_name * 2"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -435,16 +435,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "QPblckrXe2ui",
-        "outputId": "1e430cdf-553f-4dc9-bc68-ef5fc2adce36",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "1e430cdf-553f-4dc9-bc68-ef5fc2adce36"
       },
       "source": [
         "(first_name * 2) + ' ' + (second_name * 3)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -481,23 +481,23 @@
         "brick_breadth = 4\n",
         "brick_height = 2"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "pKZ7uDHCZ3At",
-        "outputId": "b6d4a208-c3ff-4b0e-d14e-b6dc4338f12c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b6d4a208-c3ff-4b0e-d14e-b6dc4338f12c"
       },
       "source": [
         "brick_volume = brick_length * brick_breadth * brick_height\n",
         "print (brick_volume)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,27 +512,24 @@
       "cell_type": "code",
       "metadata": {
         "id": "S2zZsoBb2z45",
-        "outputId": "087752a8-95f8-42a5-f765-262c4fd06fa8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1de4d035-e981-4915-88a1-094193243d8a"
       },
       "source": [
         "# 2. What will the expression -3 ** 2 evaluate to ?\n",
-        "x=-3\n",
-        "x**2"
+        "x=-3**2\n",
+        "print(x)"
       ],
-      "execution_count": 46,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "9"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 46
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-9\n"
+          ]
         }
       ]
     },
@@ -555,23 +552,23 @@
         "petrol_per_litre = 102\n",
         "cash_available= 50"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wCMMIv8tU86J",
-        "outputId": "67255fe5-f5c3-4788-8aaf-9ef86193b29c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "67255fe5-f5c3-4788-8aaf-9ef86193b29c"
       },
       "source": [
         "distance_travelled = (milage/petrol_per_litre)*cash_available\n",
         "print('distance travelled is ',round(distance_travelled,2))"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
